--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-ts",
+  "name": "react-typescript",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:mkinsz/react-ts.git",
+  "repository": "https://github.com/mkinsz/react-typescript.git",
   "author": "mkinsz <mkinsz@hotmail.com>",
   "license": "MIT",
   "keywords": [
@@ -11,9 +10,16 @@
     "react"
   ],
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js",
-    "update": "npm-check -u"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "update": "npm-check -u",
+    "lint-staged": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "eslintConfig ": {},
   "dependencies": {
@@ -40,11 +46,22 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@svgr/webpack": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "copy-webpack-plugin": "^6.0.3",
+    "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.4.0",
@@ -54,22 +71,24 @@
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "less-loader": "^6.2.0",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.3",
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.0.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.1.2",
+    "terser-webpack-plugin": "^4.1.0",
     "ts-loader": "^8.0.2",
     "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
     "webpack-merge": "^5.1.1"
-  },
-  "husky": {
-    "hooks": {}
   }
 }
