perf: use prettier

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
         "@babel/preset-typescript"
 	],
 	"plugins": [
-        ["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": true }],
+        // ["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": true }],
         ["@babel/plugin-proposal-decorators", { "legacy": true }],
         ["@babel/plugin-proposal-class-properties", { "loose": true }],
         "@babel/plugin-syntax-dynamic-import"
