--- a/package.json
+++ b/package.json
@@ -22,25 +22,24 @@
     }
   },
   "dependencies": {
-    "@loadable/component": "^5.10.3",
+    "@loadable/component": "^5.13.1",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@types/loadable__component": "^5.10.0",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
     "@types/webpack-env": "^1.15.2",
-    "less": "^3.10.3",
+    "less": "^3.12.2",
     "particles-bg": "^2.5.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-hot-loader": "^4.12.15",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
@@ -82,12 +81,11 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.6.3",
+    "typescript": "^3.9.7",
     "url-loader": "^4.1.0",
-    "webpack": "^4.41.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.1"
   }
 }
