--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "outDir": "build",
         "rootDirs": ["app/src"],
         "alwaysStrict": true,
-        "importHelpers": true,
+        "importHelpers": false, // True option need install tslib
         "resolveJsonModule": true,
         "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
@@ -20,7 +20,7 @@
         "noImplicitThis": true,
         "noImplicitAny": true,
         "allowUnusedLabels": true,
-        "strictNullChecks": true,
+        "strictNullChecks": false,  // Fuck Option destructuring assignment -- authroute.tsx
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
         "allowSyntheticDefaultImports": true,
