--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "@loadable/component": "^5.13.1",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "formik": "^2.1.5",
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.3.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -48,10 +52,12 @@
     "@types/loadable__component": "^5.13.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
     "@types/webpack-env": "^1.15.2",
+    "@types/yup": "^0.29.4",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "babel-loader": "^8.1.0",
