--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "formik": "^2.1.5",
+    "graphql-tag": "^2.11.0",
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
