--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.0.0",
     "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
