--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
   },
   "dependencies": {
     "@loadable/component": "^5.13.1",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.10.0",
+    "clsx": "^1.1.1",
     "formik": "^2.1.5",
-    "graphql-tag": "^2.11.0",
+    "history": "^5.0.0",
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.3.3",
+    "react-hook-form": "^6.5.0",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -40,47 +45,50 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.11.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@svgr/webpack": "^5.4.0",
     "@types/loadable__component": "^5.13.0",
-    "@types/react": "^16.9.46",
+    "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
     "@types/webpack-env": "^1.15.2",
-    "@types/yup": "^0.29.4",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/yup": "^0.29.6",
+    "@typescript-eslint/eslint-plugin": "^3.10.0",
+    "@typescript-eslint/parser": "^3.10.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
-    "eslint": "^7.6.0",
+    "css-loader": "^4.2.2",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "i": "^0.3.6",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.10.0",
+    "npm": "^6.14.8",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^2.0.5",
-    "sass-loader": "^9.0.3",
-    "source-map-loader": "^1.0.1",
+    "prettier": "^2.1.0",
+    "sass-loader": "^10.0.0",
+    "source-map-loader": "^1.0.2",
     "style-loader": "^1.0.0",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
@@ -88,11 +96,11 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "terser-webpack-plugin": "^4.1.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.1"
+    "webpack-merge": "^5.1.2"
   }
 }
